Les éléments / informations principales de la page d'accueil
Ceci est le code qui recouvre les éléments et les informations principales de la page d'accueil de l'index.html. C'est l'information principale qui figurera dans la page d'accueil.

--- a/index.html
+++ b/index.html
@@ -27,3 +27,68 @@
         </div>
     </header>
 </div>
+<main>
+    <section class="home">
+        <img src="images/main-banner.jpg" alt="beauprebanner">
+         <div class="banner-text"> 
+            <div class="text">
+                <h1>Bienvenue</h1>
+                <p>sur Beaupré Excurssion, une agence de voyage qui touche principalement la ville de Sainte-Anne-De-Beaupré</p>
+            </div>
+         </div>
+    </section>
+    <h2>Nos lieux touristiques</h2>
+    <div class="grid">
+        <section class="lieux">
+            <div class="border">
+                <img src="images/imege_la_basilique-450_x_300.jpeg" alt="basilique">
+                <h3>La basilique</h3>
+                <p>La basilique Sainte-Anne-de-Beaupré est une église catholique située à Sainte-Anne-de-Beaupré, non loin de la
+                rassemblement survient le 26 jutiet, fors de in Fiete de sainte Anne, patronne civile et ecclésiastique du Québec, et point culminant de la neuvaine. </p>
+            </div>
+        </section>
+        <section class="lieux">
+            <div class="border">
+                <img src="images/image_le_canyon-450_x_300.jpeg" alt="canyon">
+                <h3>Le Canyon</h3>
+                <p>Le canyon Sainte-Anne est un site naturel dont la principale attraction est une imposante chute d'eau de 74 mètres de dénivelé qui gronde entre les parois rocheuses d'un canyon de la rivière Sainte-Anne-du-Nord. Le roc sur lequel coule la rivière est vieux de 1,2 milliard d'années. </p>
+            </div>
+        </section>
+        <section class="lieux">
+            <div class="border">
+                <img src="images/image_le_quai-450_x_300.jpeg" alt="quai">
+                <h3>Le quai</h3>
+                <p>A proximité du Sanctuaire Sainte-Anne, le quai de Sainte-Anne-de-Beaupré vous offre un accès unique au Fleuve Saint-Laurent ! Venez profiter d'une vue panoramique de 360 degrés de la Ville de Sainte-Anne-de-Beaupré, de la Basilique, du Mont Sainte-Anne, du Cap-Tourmente, de l'Ile d'Orléans et de la Ville de Québec. Tout ceci au beau milieu du fleuve. Prenez le temps de vivre les marées en prenant une bouffée d'air du large. </p>
+            </div>
+        </section>
+        <section class="lieux">
+            <div class="border">
+                <img src="images/image_le_spa-450_x_300.jpeg" alt="spa">
+                <h3>Le spa</h3>
+                <p>Situés Niges du propost aurse, ar de etente noBiaure Spa minutes de Québec et 5 minutes du Mont-Sainte-Anne, notre spa nordique met à votre disposition des bains nordiques extérieurs, sauna, hammam, tipis et aires de détente. Il est possible de réserver l'endroit pour des soirées privées, anniversaires ou fêtes familiales. Des services de massage et d'esthétique sont aussi disponibles. </p>
+            </div>
+        </section>
+        <section class="lieux">
+            <div class="border">
+                <img src="images/image_le_mont-450_x_300.jpeg" alt="mont">
+                <h3>Le mont</h3>
+                <p>S'élevant majestueusement à une altitude de 800 mètres, la station de ski alpin du Mont-Sainte-Anne dévoile ses charmes sur trois versants distincts. L'un de ces versants offre une vue imprenable sur le fleuve, tandis que les deux autres se tournent vers l'arrière-pays. La station propose un domaine skiable étendu qui convient à tous les niveaux de skieurs, que ce soit de jour ou en soirée. </p>
+            </div>
+        </section>
+        <section class="lieux">
+            <div class="border">
+                <img src="images/image_le_cyclorama-450_x_300.jpeg" alt="cyclorama">
+                <h3>Le cyclorama</h3>
+                <p>Le Cyclorama de Jérusalem est le plus grand panorama d'Amérique. L'ancêtre du divertissement et de l'expérience immersive datant de la période du pré-cinéma. De la galerie d'observation, à 7 mètres de hauteur, vous pouvez contempler toute la ville et plus de 80 kilomètres de la campagne environnante. Historique et exceptionnel, ce voyage visuel, au cœur de la terre Sainte, vous fascinera.</p>
+            </div>
+        </section>
+    </div>
+    <h2>L'activite a ne pas manquer!</h2>
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/rO43BkGY274" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <h2>Pelerinage a la basilique</h2>
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/rO43BkGY274" frameborder="0" allowfullscreen></iframe>
+    </div>
+</main>
