Le Footer de la page des hôtels et le dernier hôtel
Voici le Footer de la page contenant les hôtels ainsi que le dernier hôtel manquant.

--- a/hotels.html
+++ b/hotels.html
@@ -71,6 +71,45 @@
         </div>
     </div>
 </div>
+<div class="hotels">
+    <div class="hotel">
+        <img src="images/hotel_chalet_familial_du _plateau 4.jpg" alt="chalet familial du plateau">
+    </div>
+    <div class="description">
+        <h3>Chalet familial du Plateau</h3>
+        <p>Le Chalet familial du Plateau possède une piscine extérieure ouverte en saison, une salle de sport, une terrasse, une connexion Wi-Fi gratuite, et un parking privé gratuit.</p>
+        <div class="button-container">
+            <button><a href="#">Voir les tarifs</a></button>
+            <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
+        </div>
+    </div>
+</div>
+<div class="hotels">
+    <div class="hotel">
+        <img src="images/hotel_le_4_saisons_3 5.jpg" alt="Le 4 Saisons 3">
+    </div>
+    <div class="description">
+        <h3>Le 4 Saisons 3</h3>
+        <p>Le 4 Saisons 3 propose une piscine extérieure ouverte en saison, une terrasse et une connexion Wi-Fi gratuite. Cet appartement comprend une piscine privée, un jardin et un parking privé gratuit.</p>
+        <div class="button-container">
+            <button><a href="#">Voir les tarifs</a></button>
+            <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
+        </div>
+    </div>
+</div>
 </main>
+<footer>
+    <div class="footer">
+        <div class="social-icons">
+            <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+        </div>
+        <p>&copy; Beaupré Excurssion 2023</p>
+        <a href="#top" class="up" >
+        <i class="fas fa-arrow-up"></i>
+        </a>
+    </div>
+</footer>
 </body>
 </html>
