--- a/hotels.html
+++ b/hotels.html
@@ -29,8 +29,8 @@
 </div>
 <main>
 <div class="titre">
-    <h1>Organisez le voyage de vos rêves</h1>
-    <h3>Recherchez. Réservez. Voyagez</h3>
+    <h1>Organisez le voyage de vos reves</h1>
+    <h3>Recherchez. Reservez. Voyagez</h3>
 </div>
 <div class="hotels">
     <div class="hotel">
@@ -63,7 +63,7 @@
         <img src="images/hotel_hébergement_mont-ste-anne_condo 3.jpg" alt="mont ste anne">
     </div>
     <div class="description">
-        <h3>Hébergement Mont-Ste-Anne Condos</h3>
+        <h3>Hebergement Mont-Ste-Anne Condos</h3>
         <p>Situé dans la ville de Beaupré, l'Hébergement Mont-Ste-Anne Condos est réparti sur 2 bâtiments, l'un en bas de la montagne et l'autre à seulement 1km.</p>
         <div class="button-container">
             <button><a href="#">Voir les tarifs</a></button>
