Modification dans le formulaire de contact
Ajout de modifications dans le formulaire de contact.

--- a/contact.html
+++ b/contact.html
@@ -28,13 +28,11 @@
     </header>
 </div>
 <main>
-    <h2>Concert de l'artiste Burna Boy</h2>
+    <h2>Formulaire de Contact</h2>
     <div class="form">
         <!--nom Prénom-->
-        <label for="Nom"> Nom:</label>
-        <input type="text" id="Nom" name="Nom" placeholder="saisir votre nom " required>
-        <label for="Prénom"> Prénom:</label>
-        <input type="text" id="Prénom" name="Prénom" placeholder="saisir votre prénom " required>
+        <label for="Nom"> Nom et prénom:</label>
+        <input type="text" id="Nom" name="Nom" placeholder="saisir votre nom et prénom " required>
         <!--Adresse e-mail-->
         <br>
         <label for="email">Votre adresse e-mail :</label>
