--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         <input type="checkbox" name="age" value="plus40" id="plus40"> <label for="plus40">Plus de 40 ans</label>
     </div>
     <div class="tourist">
-        <label for="city">Select City:</label>
+        <label for="city">Quel a été votre lieu touristique préféré?</label>
         <select id="city" name="city">
             <option value="city1">City 1</option>
             <option value="city2">City 2</option>
