Les éléments finaux de la page de contact
Voici les éléments finaux qui figurent dans la fiche de contact.

--- a/contact.html
+++ b/contact.html
@@ -54,30 +54,33 @@
         <input type="checkbox" name="age" value="plus40" id="plus40"> <label for="plus40">Plus de 40 ans</label>
     </div>
     <div class="tourist">
-        <label for="city">Quel a été votre lieu touristique préféré?</label>
-        <select id="city" name="city">
-            <option value="city1">City 1</option>
-            <option value="city2">City 2</option>
-            <option value="city3">City 3</option>
+        <label for="endroit">Quel a été votre lieu touristique préféré?</label>
+        <select id="endroit" name="endroit">
+            <option value="endroit1">La basilique</option>
+            <option value="endroit2">Le canyon</option>
+            <option value="endroit3">Le quai</option>
+            <option value="endroit4">Le spa</option>
+            <option value="endroit5">Le mont</option>
+            <option value="endroit6">Le Cyclorama</option>
         </select>
     </div>
     <div class="sejour">
-        <label for="city">Select City:</label>
-        <select id="city" name="city">
-            <option value="city1">City 1</option>
-            <option value="city2">City 2</option>
-            <option value="city3">City 3</option>
+        <label for="hotel">Dans quel hôtel avez vous séjourné?</label>
+        <select id="hotel" name="hotel">
+            <option value="hotel1">Auberge La Camarine</option>
+            <option value="hotel2">Le Chaleureux</option>
+            <option value="hotel3">Hébergement Mont-Ste-Anne Condos</option>
+            <option value="hotel4">Chalet familial du Plateau</option>
+            <option value="hotel5">Le 4 Saisons 3</option>
         </select>
     </div>
     <div class="voyage">
-        <p>Cochez les musiques que vous aimez le plus:</p><br>
-        <input type="radio" name="musique" id="musique1"> <label for="musique1">Last last</label><br>
-        <input type="radio" name="musique" id="musique2"> <label for="musique2">On Form</label><br>
-        <input type="radio" name="musique" id="musique3"> <label for="musique3">City Boys</label><br>
-        <input type="radio" name="musique" id="musique4"> <label for="musique4">If I'm Laying</label>
+        <p>Aviez-vous une assurance voyage?</p><br>
+        <input type="radio" name="voyage" id="voyage1"> <label for="voyage1">Oui</label><br>
+        <input type="radio" name="voyage" id="voyage2"> <label for="voyage2">Non</label><br>
     </div>
     <div class="message">
-    <label for="feadback">Laissez un commentaire :</label>
+    <label for="feadback">Message</label>
     <textarea name="feadback" id="feadback" cols="30" rows="10" placeholder="écrivez ici"></textarea>
     </div>
     <div class="envoyer">
