modification de la page a propos
ceci sont les modifications de la page A Propos

--- a/a propos.html
+++ b/a propos.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/cf37d81192.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Beaupre Excurssion</title>
+    <title>Beaupre Excursion</title>
 </head>
 <body>
 <div class="navigation">
     <header>
         <div class="header">
             <nav id="#top" class="logo">
-                <img src="images/blogo.png" alt="beaupre logo">
+                <a href="index.html"><img src="images/blogo.png" alt="beaupre logo"></a>
             </nav>
             <ul class="nav">
-                <li><button><a href="index.html">Accueil</a></button></li>
-                <li><button><a href="hotels.html">Nos Hotels</a></button></li>
-                <li><button><a href="propos.html">A propos</a></button></li>
-                <li><button><a href="contact.html">Contact</a></button></li>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="hotels.html">Nos Hôtels</a></li>
+                <li><a href="propos.html">À Propos</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="search">
                 <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
@@ -30,10 +34,10 @@
 <main>
 <div class="presentation">
     <div class="titre">
-        <h1>Presentation brieve du project</h1>
+        <h1>Présentation briève du projet</h1>
     </div>
     <div class="project">
-        <p>Notre fe Bet est xit ton pa une a Sainte de me-De-
+        <p>Notre projet est un site tenu par une agence de voyage nommée Beaupré Excursion localisée à Sainte de me-De-
         Beaupré afin d'y attirer plus de touristes. Ce site se focalise exclusivement sur ses lieux touristiques et les moyens nécessaires pour assurer aux clients un voyage exceptionnel vers cette destination.</p>
     </div>
 </div>
@@ -42,12 +46,12 @@
         <h1>L'aspects visuel et le contenu du site:</h1>
     </div>
     <div class="project">
-        <p>Par rapport à l'aspect visuel du site web, nous avons choisi du vert turquoisecomme couleur pour faire ressortir un sentiment de confort et de joie, puisque c'est ce que le terme de voyage impliquait à nos yeux. Lorsque l'utilisateur est dans une page, l'onglet du header de cette même page est en turquoise pâle pour situer l'utilisateur dans la page où il se trouve afin que celui-ci ne soit pas perdu dans le site. Cette même couleur sera aussi présente sur l'interface du futur site lorsque l'utilisateur aura cliqué sur une case à cocher, écrit sur une zone de format de saisi, cliqué sur un bouton radio et choisi une option sur une liste déroulante. Cette fonctionnalité constitue également au guidage du site, ce qui améliore la navigation dans le contenu de celui-ci. Nous avons optée pour la police "Josefin Sans", car c'est une police sans empattement, et donc, une police qui est beaucoup plus facile à lire pour les utilisateurs qui consulteront le site. Pour mettre l'accentuation sur les titres, la police est mise en caractère gras, les sections situées dans le Header sont en caractère semi-gras, et les descriptions sont en caractère régulier. Le deuxième aspects du contenu du site est son homogénéité. Nous avons fait de notre mieux pour que toutes les pages aient la même esthétique, la même police, ainsi que les même types d'emplacements. Cette repartition uniforme de tous les éléments à pour but de rendre la navigation de l'utilisateur plus simple et agréable, afin qu'il sache qu'il est toujours dans le même site. Finalement, pour ce qui en est de l'inspiration, nous nous sommes inspirées du site Essential Costa Rica et du site Booking.</p>
+        <p>Par rapport à l'aspect visuel du site web, nous avons choisi du vert turquoise comme couleur pour faire ressortir un sentiment de confort et de joie, puisque c'est ce que le terme de voyage impliquait à nos yeux. Lorsque l'utilisateur est dans une page, l'onglet du header de cette même page est en turquoise pâle pour situer l'utilisateur dans la page où il se trouve afin que celui-ci ne soit pas perdu dans le site. Cette même couleur sera aussi présente sur l'interface du futur site lorsque l'utilisateur aura cliqué sur une case à cocher, écrit sur une zone de format de saisi, cliqué sur un bouton radio et choisi une option sur une liste déroulante. Cette fonctionnalité constitue également au guidage du site, ce qui améliore la navigation dans le contenu de celui-ci. Nous avons optée pour la police "Josefin Sans", car c'est une police sans empattement, et donc, une police qui est beaucoup plus facile à lire pour les utilisateurs qui consulteront le site. Pour mettre l'accentuation sur les titres, la police est mise en caractère gras, les sections situées dans le Header sont en caractère semi-gras, et les descriptions sont en caractère régulier. Le deuxième aspects du contenu du site est son homogénéité. Nous avons fait de notre mieux pour que toutes les pages aient la même esthétique, la même police, ainsi que les même types d'emplacements. Cette repartition uniforme de tous les éléments à pour but de rendre la navigation de l'utilisateur plus simple et agréable, afin qu'il sache qu'il est toujours dans le même site. Finalement, pour ce qui en est de l'inspiration, nous nous sommes inspirées du site Essential Costa Rica et du site Booking.</p>
     </div>
 </div>
 <div class="presentation">
     <div class="titre">
-        <h1>Les Pages, Les elements et les defis:</h1>
+        <h1>Les Pages, Les éléments et les défis:</h1>
     </div>
     <div class="project">
         <p>J'ai travaillé sur la page "À propos", la page "Nos Hôtels", le Header, ainsi que la page d'accueil, que j'ai fait avec Hajar en l'aidant sur le contenu de celle-ci. Dans la page "Nos Hôtels", je me suis majoritairement occupée de l'esthétique et des descriptions des hôtels. J'ai également été responsable du peaufinage des pages et de la révision du contenu. Mon plus grand défi a été d'agencer l'esthétique de mes pages de sorte qu'elle soit identique à celles de Hajar pour que l'utilisateur sache qu'il est dans le même site dans toutes les pages durant tout le long de son utilisation. Un autre déti que jai rencontré durant le processus de conception du site était de trouver un emplacement logique à l'intérieur du site pour les vidéos et le son que l'on devait insérer.</p>
@@ -58,16 +62,18 @@
 </div>
 <h2>Vlog</h2>
     <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/rO43BkGY274" frameborder="0" allowfullscreen></iframe>
+        <video controls>
+            <source src="images/vlog.mp4" type="video/mp4">
+            Your browser does not support the video element.
+        </video>
     </div>
-<<<<<<< Updated upstream
 </main>
 <footer>
     <div class="footer">
         <div class="social-icons">
-            <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
         <p>&copy; Beaupré Excurssion 2023</p>
         <a href="#top" class="up" >
@@ -77,6 +83,3 @@
 </footer>
 </body>
 </html>
-=======
-</main>
->>>>>>> Stashed changes
