Modification d'une erreur
Modification d'une erreur dans le texte dans la page à propos

--- a/propos.html
+++ b/propos.html
@@ -37,7 +37,7 @@
         <h1>Présentation briève du projet</h1>
     </div>
     <div class="project">
-        <p>Notre projet est un site tenu par une agence de voyage nommée Beaupré Excursion localisée à Sainte de me-De-
+        <p>Notre projet est un site tenu par une agence de voyage nommée Beaupré Excursion localisée à Sainte Anne-De-
         Beaupré afin d'y attirer plus de touristes. Ce site se focalise exclusivement sur ses lieux touristiques et les moyens nécessaires pour assurer aux clients un voyage exceptionnel vers cette destination.</p>
     </div>
 </div>
