--- a/hotels.html
+++ b/hotels.html
@@ -38,7 +38,7 @@
 </div>
 <div class="hotels">
     <div class="hotel">
-        <img src="images/hotel_auberge-la_Camarine1.jpg" alt="auberge la camarine">
+        <img src="images/hotel_auberge-la_Camarine 1.jpg" alt="auberge la camarine">
     </div>
     <div class="description">
         <h3>Auberge La Camarine</h3>
@@ -51,7 +51,7 @@
 </div>
 <div class="hotels">
     <div class="hotel">
-        <img src="images/hotel_le_chaleurex2.jpg" alt="hotel le Chaleureux">
+        <img src="images/hotel_le_chaleurex 2.jpg" alt="hotel le Chaleureux">
     </div>
     <div class="description">
         <h3>Le Chaleureux</h3>
@@ -64,7 +64,7 @@
 </div>
 <div class="hotels">
     <div class="hotel">
-        <img src="images/hotel_hébergement_mont-ste-anne_condo3.jpg" alt="mont ste anne">
+        <img src="images/hotel_hébergement_mont-ste-anne_condo 3.jpg" alt="mont ste anne">
     </div>
     <div class="description">
         <h3>Hébergement Mont-Ste-Anne Condos</h3>
@@ -77,7 +77,7 @@
 </div>
 <div class="hotels">
     <div class="hotel">
-        <img src="images/hotel_chalet_familial_du_plateau4.jpg" alt="chalet familial du plateau">
+        <img src="images/hotel_chalet_familial_du _plateau 4.jpg" alt="chalet familial du plateau">
     </div>
     <div class="description">
         <h3>Chalet familial du Plateau</h3>
@@ -90,7 +90,7 @@
 </div>
 <div class="hotels">
     <div class="hotel">
-        <img src="images/hotel_le_4_saisons_35.jpg" alt="Le 4 Saisons 3">
+        <img src="images/hotel_le_4_saisons_3 5.jpg" alt="Le 4 Saisons 3">
     </div>
     <div class="description">
         <h3>Le 4 Saisons 3</h3>
