--- a/propos.html
+++ b/propos.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Beaupre Excursion</title>
 </head>
 <body>
@@ -37,7 +37,7 @@
         <h1>Présentation briève du projet</h1>
     </div>
     <div class="project">
-        <p>Notre projet est un site tenu par une agence de voyage nommée Beaupré Excursion localisée à Sainte Anne-De-
+        <p>Notre projet est un site tenu par une agence de voyage nommée Beaupré Excursion localisée à Sainte de me-De-
         Beaupré afin d'y attirer plus de touristes. Ce site se focalise exclusivement sur ses lieux touristiques et les moyens nécessaires pour assurer aux clients un voyage exceptionnel vers cette destination.</p>
     </div>
 </div>
