Ajout d'une légende au fieldset
Ajout de la légende d'informations personnelles au fieldset dans le formulaire de contact.

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
 <main>
     <h2>Formulaire de contact</h2>
     <fieldset>
+        <legend><h2>Informations Personnelles</h2></legend>
         <div class="form">
             <label for="Nom"> Nom et Prénom:</label>
             <input type="text" id="Nom" name="Nom" placeholder="Saisir votre nom et prenom" required>
