Modification du css du fieldset
Modification du css du fieldset pour la section des informations personnelles.

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 </div>
 <main>
     <h2>Formulaire de contact</h2>
-    <fieldset>
+    <fieldset class="fieldset">
         <legend><h2>Informations Personnelles</h2></legend>
         <div class="form">
             <label for="Nom"> Nom et Prénom:</label>
