--- a/contact.html
+++ b/contact.html
@@ -54,36 +54,39 @@
             <input type="checkbox" name="age" value="plus40" id="plus40"> <label for="plus40">Plus de 40 ans</label>
         </div>
     </fieldset>
-    <div class="tourist">
-        <label for="lieu">Quel a été votre lieu touristique préféré?</label>
-        <select id="lieu" name="lieu">
-            <option value="lieu1">La Basilique</option>
-            <option value="lieu2">Le Canyon</option>
-            <option value="lieu3">Le Cyclorama</option>
-            <option value="lieu4">Le Spa</option>
-            <option value="lieu5">Le Mont</option>
-            <option value="lieu6">Le Quai</option>
-        </select>
-    </div>
-    <div class="sejour">
-        <label for="hotel">Dans quel hôtel avez-vous séjourné?</label>
-        <select id="hotel" name="hotel">
-            <option value="hotel1">Auberge La Camarine</option>
-            <option value="hotel2">Le Chaleureux</option>
-            <option value="hotel3">Hébergement Mont-Ste-Anne Condos</option>
-            <option value="hotel4">Chalet familial du Plateau</option>
-            <option value="hotel5">Le 4 Saisons 3</option>
-        </select>
-    </div>
-    <div class="voyage">
-        <p>Aviez-vous une assurance voyage?</p>
-        <input type="radio" name="option" id="option1"> <label for="option1">Oui</label><br>
-        <input type="radio" name="option" id="option2"> <label for="option2">Non</label><br>
-    </div>
-    <div class="message">
-    <label for="message">Message</label>
-    <textarea name="message" id="message" cols="30" rows="10" placeholder="écrivez ici"></textarea>
-    </div>
+    <fieldset class="fieldset">
+        <legend><h2>Informations touristiques</h2></legend>
+        <div class="tourist">
+            <label for="lieu">Quel a été votre lieu touristique préféré?</label>
+            <select id="lieu" name="lieu">
+                <option value="lieu1">La Basilique</option>
+                <option value="lieu2">Le Canyon</option>
+                <option value="lieu3">Le Cyclorama</option>
+                <option value="lieu4">Le Spa</option>
+                <option value="lieu5">Le Mont</option>
+                <option value="lieu6">Le Quai</option>
+            </select>
+        </div>
+        <div class="sejour">
+            <label for="hotel">Dans quel hôtel avez-vous séjourné?</label>
+            <select id="hotel" name="hotel">
+                <option value="hotel1">Auberge La Camarine</option>
+                <option value="hotel2">Le Chaleureux</option>
+                <option value="hotel3">Hébergement Mont-Ste-Anne Condos</option>
+                <option value="hotel4">Chalet familial du Plateau</option>
+                <option value="hotel5">Le 4 Saisons 3</option>
+            </select>
+        </div>
+        <div class="voyage">
+            <p>Aviez-vous une assurance voyage?</p>
+            <input type="radio" name="option" id="option1"> <label for="option1">Oui</label><br>
+            <input type="radio" name="option" id="option2"> <label for="option2">Non</label><br>
+        </div>
+        <div class="message">
+        <label for="message">Message</label>
+        <textarea name="message" id="message" cols="30" rows="10" placeholder="écrivez ici"></textarea>
+        </div>
+    </fieldset>
     <div class="envoyer">
         <input type="submit" value="Soummetre">
         <input class="re" type="submit" value="Reinitialiser">
